--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "scripts": {
         "dev": "mix",
         "watch": "mix watch",
-        "prod": "rm -fr build_production && rm -fr docs && mix --production && mv build_production/ docs && cp CNAME docs/CNAME"
+        "prod": "rm -fr build_production && rm -fr docs && mix --production && mv build_production/ docs"
     },
     "devDependencies": {
         "axios": "^0.21.1",
